# dotfiles

./: .gitignore  nazuna.json
master/: .curlrc  .flake8  .gitconfig  .hgrc
master/.hgrc.d/: utime.py
master/gocode/: config.json
master/peco/: config.json
master/vimfiles/: gvimrc  vimrc
master/vimfiles/after/ftplugin/: c.vim  css.vim  gitcommit.vim  go.vim  goyacc.vim  hgcommit.vim  html.vim  java.vim  javascript.vim  json.vim  lua.vim  perl.vim  python.py  python.vim  rst.vim  scheme.vim  sh.vim  svn.vim  toml.vim  tweetvim.vim  unite.vim  vim.vim  xml.vim  yaml.vim  zsh.vim
master/vimfiles/ftdetect/: javascript.vim  python.vim  yaml.vim
master/vimfiles/template/: pyproject.toml  setup.cfg  setup.py  template.c  template.cpp  template.go  template.h  template.py  template.pyi  template.vim  template_test.go  test_template.py
master/vimfiles/template/autoload/: template.vim
master/vimfiles/template/doc/: template.txt
master/vimfiles/template/filetype/: rc  vimspec
master/vimfiles/template/ftplugin/: template.vim
master/vimfiles/template/indent/: template.vim
master/vimfiles/template/plugin/: template.vim
master/vimfiles/template/syntax/: template.vim
master/vimfiles/vsnip/: go.json  vim.json
os/linux/: .Xmodmap  .cvsrc  .inputrc  .npmrc  .tmux.conf  .xinitrc  .zprofile  .zshenv  .zshrc
os/linux/.config/autostart/: bell.desktop
os/linux/.config/htop/: htoprc
os/linux/.config/mlterm/: aafont  color  main
os/linux/.config/pkgcheck/: pkgcheck.conf
os/linux/.config/pkgdev/: pkgdev.conf
os/linux/.config/zsh/: .zprofile  .zshenv  .zshrc
os/linux/.hgrc.d/: os.rc
os/windows/: .npmrc  .nyagos  _nya
os/windows/.hgrc.d/: os.rc
os/windows/.nya.d/: color.lua  compiler.lua  environ.lua  nya.lua  venv.lua
