:silent %s/<+PACKAGE+>/\=expand('%:p:h:t')/ge
[metadata]
name = <+PACKAGE+>
description =
long_description = file: README.rst
author = <%= g:user.name %>
author_email = <%= g:user.email %>
url = https://example.com/<+PACKAGE+>
license =
license_files = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.7
packages = <+PACKAGE+>

[options.package_data]
<+PACKAGE+> =

[sdist]
formats = zip
group = users

[bdist_wheel]
universal = 1

[flake8]
extend-ignore = E129, E741
max-line-length = 160

[mypy]
strict = True
